--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -69,12 +69,12 @@
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
                     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; width:10%;">
                         <%= button_to "Show", article_path(article), method: :get, class: "article_card_btn", id: "show_btn" %> 
-                        <% if logged_in? && current_user.id == article.user_id %>
+                        <% if logged_in? && (current_user.id == article.user_id || current_user.admin ) %>
                             <%= button_to "Edit", edit_article_path(article), method: :get, class: "article_card_btn", id: "edit_btn" %> 
                         <%end%>   
                     </div>
                     <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-                        <% if logged_in? && current_user.id == article.user_id %>
+                        <% if logged_in? && (current_user.id == article.user_id || current_user.admin ) %>
                             <%= button_to "Delete", article_path(article), method: :delete, class: "article_card_btn", id: "del_btn", data: { confirm: "Are you sure?" } %> 
                         <%end%>
                     </div> 
