--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,25 +1,7 @@
 <!-- <h1>This is the show functionality!</h1> -->
 
+<%= render "shared/flash_msgs" %>
 
-
-<% flash.each do |key, value|%>
-    <!-- <ul>
-        <li>
-            <%= value %>
-        </li>
-    </ul> -->
-    <div class="container" style="margin-top: 0.2%;">
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <h4 class="alert-heading">Success</h4>
-            <ul>
-                <li><%= value %></li>
-            </ul>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-<% end %>
 
 <h1 style="text-decoration: underline; text-align: center; margin: 20px;">Blog</h1>
 <!-- <p><strong>Title: </strong>
@@ -50,14 +32,14 @@
             </p>
             <div style="display: flex; justify-content: space-between; flex-wrap: wrap;"">
                 <div style="display: flex; justify-content: space-between; flex-wrap: wrap; width:11%;">
-                    <% if logged_in? && current_user.id == @article.user_id %>
+                    <% if logged_in? && (current_user.id == @article.user_id || current_user.admin ) %>
                         <%= button_to "Edit" , edit_article_path(@article), method: :get, class: "article_card_btn", id: "edit_btn" %>
                         <%= button_to "Delete" , article_path(@article), method: :delete, class: "article_card_btn", id: "del_btn" , data: { confirm: "Are you sure?" } %>
                     <%else%>
                         <%= button_to "Go back" , articles_path(@article), method: :get, class: "article_card_btn", id: "show_btn"%>
                     <%end%>
                 </div>
-                <% if logged_in? && current_user.id == @article.user_id %>
+                <% if logged_in? && (current_user.id == @article.user_id || current_user.admin ) %>
                     <div>
                         <%= button_to "Go back" , articles_path(@article), method: :get, class: "article_card_btn", id: "show_btn"%>
                     </div>
