--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,22 +4,8 @@
 <h2>
     <%= link_to "About Us" , about_path %>
 </h2> -->
-<% flash.each do |key, value| %>
-    <!-- <ul>
-        <li><%= value %></li>
-    </ul> -->
-    <div class="container" style="margin-top: 0.2%;">
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <h4 class="alert-heading">Success!</h4>
-            <ul>
-                <li><%= value %></li>
-            </ul>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-<%end%>
+<%= render "shared/flash_msgs" %>
+
 <div>
     <div class="container text-center" id="home_container">
         <div class="jumbotron col-8 mx-auto" id="home_jumbotron">
