--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,4 @@
-<% flash.each do |key, value|%>
-    <div class="container" style="margin-top: 0.2%;">
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <h4 class="alert-heading">Success</h4>
-            <ul>
-                <li><%= value %></li>
-            </ul>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-<% end %>
+<%= render "shared/flash_msgs" %>
 
 <div class="main-content">
   <div class="container mt-7">
@@ -32,9 +20,9 @@
           </div>
           <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
-                <a href="" class="go-back-home">@<%= @user.username %>'s profile</a>
                 <% if @user == current_user %>
                   <%= link_to "Edit your profile", edit_user_path(@user), class: "go-back-home" %>
+                  <%= link_to "Delete profile", user_path(@user.id), method: :delete, class: "go-back-home", style:"color: red", data: { confirm: "Are you sure?" } %>
                 <%end%>
                 <!-- <a href="edit" class="go-back-home">Edit your profile</a> -->
               </div>
