--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/errors", obj:@category %>
+
 <div class="container shadow p-3 mb-5 bg-white col-5  rounded" style="margin-top: 3%;">
     <div class="card">
         <div class="card-header text-center">
