--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -3,7 +3,7 @@
     <p><%= obj.errors.full_messages[0] %></p> -->
     <div class="container" style="margin-top: 0.2%;">
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <h4 class="alert-heading">An Error occured.</h4>
+            <h4 class="alert-heading">An error occured.</h4>
             <ul>
                 <li><%= obj.errors.full_messages[0] %></li>
             </ul>
