--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,6 +44,20 @@
                     </div>
                 </li>
             <%end%>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <%= "Categories" %>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <% if logged_in? && current_user.admin %>
+                        <%= link_to "Add categories", new_category_path, {class: "dropdown-item"} %>
+                    <%end%>
+                        <%= link_to "View categories", categories_path, {class: "dropdown-item"} %>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="">Close</a>
+                </div>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about">About us</a>
             </li>
